<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>org.rj.homectl</groupId>
    <artifactId>home-control</artifactId>
    <version>master-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.release>11</maven.compiler.release>

        <spring.version>5.2.10.RELEASE</spring.version>
        <spring-boot.version>2.3.5.RELEASE</spring-boot.version>
        <spring-kafka.version>2.5.9.RELEASE</spring-kafka.version>
        <apache.commons-lang.version>3.11</apache.commons-lang.version>
        <apache.commons-io.version>2.8.0</apache.commons-io.version>
        <jackson.version>2.12.0</jackson.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <org.jooq.jool.version>0.9.14</org.jooq.jool.version>
        <apache.kafka.version>2.6.0</apache.kafka.version>
        <swagger-codegen.plugin.version>2.4.19</swagger-codegen.plugin.version>
        <swagger-codegen-plugin.v3.version>3.0.25</swagger-codegen-plugin.v3.version>
        <junit.version>4.13.1</junit.version>
    </properties>

    <modules>
        <module>aggregation</module>
        <module>common</module>
        <module>kafka-common</module>
        <module>status-event</module>
        <module>status-event-consumer</module>
        <module>model-awair</module>
        <module>model-hue</module>
        <module>monitor-agent-awair</module>
        <module>status-event-producer</module>
        <module>service-common</module>
        <module>spring-common</module>
        <module>monitor-agent-hue</module>
        <module>monitor-agent-st</module>
        <module>model-st</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache.commons-lang.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${apache.commons-io.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jooq</groupId>
                <artifactId>jool</artifactId>
                <version>${org.jooq.jool.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-streams</artifactId>
                <version>${apache.kafka.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.kafka</groupId>
                <artifactId>spring-kafka</artifactId>
                <version>${spring-kafka.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
                <version>${spring-boot.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>